added health check up status api
